--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,7 +15,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: #262626;
+    background-color: #2e302b;
   }
   
   header {
@@ -66,12 +66,12 @@
     text-align: center;
     font-size: 1.25rem;
     transition: border-bottom-color 0.3s ease-in-out;
-    caret-color: #56BC58;
+    caret-color: #f67129;
   }
   
   .input:focus {
     outline: none;
-    border-bottom-color: #56BC58;
+    border-bottom-color: #f67129;
   }
   
   .input::placeholder {
@@ -83,9 +83,9 @@
     cursor: pointer;
     font-family: inherit;
     font-size: 1.15rem;
-    color: #262626;
+    color: #F5F5F5;
     border: none;
-    background-color: #56BC58;
+    background-color: #f67129;
     padding: 0.75em 1.25rem;
     box-shadow: 3px 3px 0 0 #ffffff;
     transition: box-shadow 0.2s ease-in-out;
