--- a/views/layouts/dashboard/layout.ejs
+++ b/views/layouts/dashboard/layout.ejs
@@ -24,11 +24,15 @@
   <link href="dashboard/css/icons.css" rel="stylesheet" type="text/css">
   <link href="dashboard/css/style.css" rel="stylesheet" type="text/css">
 
+  <!--jVector Map Imports-->
+  <link rel="stylesheet" href="https://jvectormap.com/css/jquery-jvectormap-2.0.5.css" type="text/css" media="screen"/>
+  <script src="https://jvectormap.com/js/jquery-3.4.1.min.js"></script>
+  <script src="https://jvectormap.com/js/jquery-jvectormap-2.0.5.min.js"></script>
+  <script src="https://jvectormap.com/js/jquery-jvectormap-world-mill.js"></script>
 </head>
 <body>
   <%- body  %> 
   <!--Jquery js-->
-  <script src="dashboard/js/jquery.min.js"></script>
   <script src="dashboard/js/bootstrap.bundle.min.js"></script>
   <script src="dashboard/js/metismenu.min.js"></script>
   <script src="dashboard/js/jquery.slimscroll.js"></script>
