Fixed register issue

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,7 +11,7 @@
 
           <%- include ("./partials/messages") %>
           
-          <form class="form-horizontal m-t-30" action="index.html">
+          <form class="form-horizontal m-t-30" action="/users/register" method="POST">
 
                   <div class="form-group">
                           <div class="col-12">
