Added Discord Login Support

--- a/views/layouts/dashboard/layout.ejs
+++ b/views/layouts/dashboard/layout.ejs
@@ -67,4 +67,5 @@
 
   <!-- Datatable init js -->
   <script src="dashboard/pages/datatables.init.js"></script>   
+  <script src="dashboard/js/util.js"></script>
 </body>
