--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,6 +31,12 @@
                         <button class="btn btn-primary btn-block btn-lg waves-effect waves-light" type="submit">Log In</button>
                     </div>
                 </div>
+                
+                <div class="form-group text-center m-t-20">
+                    <div class="col-12">
+                        <button class="btn btn-primary btn-block btn-lg waves-effect waves-light" id="discord">Discord</button>
+                    </div>
+                </div>
 
                 <div class="form-group row m-t-30 m-b-0">
                     <div class="col-sm-7">
