Added link to dashboard from landing page

--- a/public/frontend/css/styles.css
+++ b/public/frontend/css/styles.css
@@ -101,4 +101,18 @@
     color: inherit;
   }
 
+  .float{
+    position:fixed;
+    width:60px;
+    height:60px;
+    bottom:40px;
+    right:40px;
+    background-color:#f67129;
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+  }
   
+  .my-float{
+    margin-top:22px;
+  }
