--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,5 +12,8 @@
   <input class="input" type="text" name="url" id="url" placeholder="enter a url" required>
   <input class="input" type="text" name="slug" id="slug" placeholder="enter a slug">
   <button type="submit" class="create">create</button>
+  <a href="/dashboard" class="float">
+    <i class="fa fa-home fa-lg my-float"></i>
+  </a>
 </form>
 
