--- a/views/layouts/frontend/layout.ejs
+++ b/views/layouts/frontend/layout.ejs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shorten Url</title>
   <link rel="stylesheet" href="frontend/css/styles.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
     <%- body  %> 
