--- a/views/layouts/dashboard/layout.ejs
+++ b/views/layouts/dashboard/layout.ejs
@@ -38,12 +38,12 @@
   <script src="dashboard/js/jquery.slimscroll.js"></script>
   <script src="dashboard/js/waves.min.js"></script>
 
-  <!--Morris Chart-->
+  <!--Morris Chart
   <script src="dashboard/plugins/morris/morris.min.js"></script>
   <script src="dashboard/plugins/raphael/raphael.min.js"></script>
-
+  
   <script src="dashboard/pages/dashboard.init.js"></script>
-
+  -->
   <!-- App js -->
   <script src="dashboard/js/app.js"></script>
 
