--- a/views/admin/alluser.ejs
+++ b/views/admin/alluser.ejs
@@ -110,23 +110,25 @@
                 <ul class="metismenu" id="side-menu">
                     <li class="menu-title">Menu</li>
                     <li>
-                        <a href="#" class="waves-effect">
-                            <i class="icon-accelerator"></i><span> Dashboard </span>
+                        <a href="/dashboard" class="waves-effect">
+                            <i class="icon-accelerator"></i><span> Personal Dashboard </span>
                         </a>
                     </li>
-                    
                     <li>
-                        <a href="/dashboard/url" class="waves-effect">
-                            <i class="icon-accelerator"></i><span> Urls History </span>
+                        <a href="/dashboard/admin" class="waves-effect">
+                            <i class="icon-accelerator"></i><span> Admin Dashboard </span>
                         </a>
                     </li>
-                    <% if (user.isAdmin) { %> 
-                        <li>
-                            <a href="/dashboard/admin" class="waves-effect">
-                                <i class="icon-accelerator"></i><span> Admin Dashboard </span>
-                            </a>
-                        </li>  
-                    <% } %> 
+                    <li>
+                        <a href="#" class="waves-effect">
+                            <i class="icon-accelerator"></i><span> All Users </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/dashboard/admin/allurl" class="waves-effect">
+                            <i class="icon-accelerator"></i><span> All Urls </span>
+                        </a>
+                    </li>  
                 </ul>
 
             </div>
@@ -165,80 +167,67 @@
                         <div class="card m-b-30">
                             <div class="card-body">
 
-                                <h4 class="mt-0 header-title">Url Shortner</h4>
-                                <p class="sub-title">Shorten your <code
-                                        class="highlighter-rouge">long url</code> with one click</code>.</p>
-                                
-                                <!-- start form -->
-                                <form action="/dashboard" method="post">
-                                    <!--Start Message Display-->
-                                    <% if(created) { %> 
-                                        <div class="alert alert-success alert-dismissible fade show" role="alert">
-                                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                                <span aria-hidden="true">×</span>
-                                            </button>
-                                            Your short url is <a href="<%= created %>" class="alert-link"><%= created %> </a>.
-                                        </div>
-                                    <% } %>
-                                    <% if(error) { %>
-                                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                                <span aria-hidden="true">×</span>
-                                            </button>
-                                            <%= error %> 
-                                        </div>
-                                    <% } %>
-                                    <!--End Message Display-->
-                                    <div class="form-group row">
-                                        <label for="url" class="col-sm-2 col-form-label">Long Url</label>
-                                        <div class="col-sm-10">
-                                            <input class="form-control" type="text" name="url" id="url" placeholder="Enter long url" required>
-                                        </div>
+                                <h4 class="mt-0 header-title">All Users</h4>
+                                <p class="sub-title../plugins">
+                                    You can find all <code
+                                    class="highlighter-rouge">user details </code> for your registered users!
+                                </p>
+                                <!--Start Message Display-->
+                                <% if(alert) { %> 
+                                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                            <span aria-hidden="true">×</span>
+                                        </button>
+                                        <%= alert %> 
                                     </div>
-                                    <div class="form-group row">
-                                        <label for="slug" class="col-sm-2 col-form-label">Slug</label>
-                                        <div class="col-sm-10">
-                                            <input class="form-control" type="text" name="slug" id="slug" placeholder="Enter slug">
-                                        </div>
+                                <% } %>
+                                <% if(error) { %>
+                                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                            <span aria-hidden="true">×</span>
+                                        </button>
+                                        <%= error %> 
                                     </div>
-                                    <div class="form-group row">
-                                        <label for="slug" class="col-sm-2 col-form-label">Valid Till</label>
-                                        <div class="col-sm-10">
-                                            <input class="form-control" type="text" name="validFor" id="validFor" placeholder="No of days url will be valid">
-                                        </div>
-                                    </div>
-                                    <div class="form-group row">
-                                        <div class="col-sm-10">
-                                            <input class="form-control" type="hidden" name="userid" id="userid" value="<%= user.id %>">
-                                        </div>
-                                    </div>
-                                    <button type="submit" value="submit" class="btn btn-primary waves-effect waves-light">Shorten!</button>
-                                </form><!-- end form-->
-                            </div>
-                        </div>
-                    </div> <!-- end col -->
-                </div> <!-- end row --> 
-                
-                <div class="row"> <!-- start row -->
-                    <div class="col-12"> <!-- start col--> 
-                        <div class="card m-b-30">
-                            <h3 class="card-header ft-16 mt-0">Recent Activity</h3>
-                            <div class="card-body">
-                                <% if(notifications) { %>
-                                    <% notifications.forEach(notification => {%>
-                                        <h4 class="card-title font-16 mt-0"> <%= notification.createdOn.toString().slice(0,24).split('T')[0] %> </h4>
-                                        <p class="card-text"> <%= notification.message %> </p>
-                                    <% }) %>
-                                <% } else { %>
-                                    <p class="card-text">No logs can be found at this time!</p>
-                                <% } %> 
+                                <% } %>
+                                <!--End Message Display-->
+                                <table id="datatable-buttons" class="table table-striped table-bordered dt-responsive nowrap" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                                    <thead>
+                                        <tr>
+                                            <th>Name</th>
+                                            <th>Email</th>
+                                            <th>Created On</th>
+                                        </tr>
+                                    </thead>
+
+
+                                    <tbody>
+                                        <% users.forEach(user => {%> 
+                                            <tr>
+                                                <td><%= user.name %> </td>
+                                                <td><%= user.email %> </td>
+                                                <td><%= user.date %> days</td>
+                                                <td>
+                                                    <div>
+                                                        <form action="/dashboard/admin/allusers/deleteuser" method="post">
+                                                            <input type="hidden" name="slug" id="slug" value="<%=user._id%>">
+                                                            <button type="submit" value="submit" class="btn btn-primary btn-sm">Delete</button>
+                                                        </form>        
+                                                    </div>
+                                                </td>
+                                            </tr>
+                                        <% }) %>
+                                    </tbody>
+                                </table>
+
                             </div>
                         </div>
                     </div> <!-- end col -->
                 </div> <!-- end row -->
+
                 
             </div>
             <!-- container-fluid -->
+
         </div>
         <!-- content -->
 
